--- a/sass/component/_header.sass
+++ b/sass/component/_header.sass
@@ -1,7 +1,7 @@
 /* header */
 
 header
-  height: 50px
+  height: 10vw
   margin: 0 auto
   padding: 0
   width: 100%
@@ -12,7 +12,7 @@ header
   display: flex
   justify-content: space-between
   width: 100%
-  margin: auto $gutter-space
+  margin: auto
   padding: $gutter-space 0
 
 .app-name
@@ -24,3 +24,6 @@ header
 .user-name, .avatar, .notification
   float: right
   margin: auto
+
+.notification
+  border-right: 1px solid $dark-purple
